# ImageProcessing

./: CMakeLists.txt  main.cpp
Color/: Color.cpp  Color.h
Edges/: Edges.cpp  Edges.h
Histogram/: Histogram.cpp  Histogram.h
Matrix/: Matrix.cpp  Matrix.h
Mixing/: Mixing.cpp  Mixing.h
Utility/: Utility.h
